setup gulp for css

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My First Page</title>
+  <link href="./assets/styles/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>Hey This my cool website</h1>
