setup gulp for scripts

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,13 @@
     <li>babel</li>
     <li>gulp</li>
   </ol>
+  <form id='myForm'>
+    <label>
+      Enter Item to learn:-
+      <input name="newItem" id="newItem" type="text" placeholder="Type here..." required maxlength="50">
+    </label>
+    <input type="submit" value="Add Item" />
+  </form>
+  <script src='./assets/scripts/main.js' type="text/javascript"></script>
 </body>
 </html>
