add image compression using gulp

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,29 @@
 </head>
 <body>
   <h1>Hey This my cool website</h1>
+  <div class='img-container'>
+    <div class='img-item'>
+      <img src="./assets/img/earth.png" alt='earth' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/water-split.png" alt='water-split' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/colorful.jpeg" alt='colorful' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/light-blur.jpeg" alt='light-blur' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/train-rails.jpeg" alt='train-rails' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/celebration.gif" alt='celebration' />
+    </div>
+    <div class='img-item'>
+      <img src="./assets/img/haha.gif" alt='haha' />
+    </div>
+  </div>
   <ul>
     <li>something</li>
     <li>soemthing cool</li>
